2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Wrap Boost.Variant usage.
	* include/roboptim/core/generic-solver.hh: Add
	getMinimum and mimimumType methods to wrap Boost.Variant.
	* tests/plugin.cc,
	* tests/simple.cc: Update test cases.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo.
	* include/roboptim/core/linear-function.hh: Here.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Doxygen documentation.
	* include/roboptim/core/fwd.hh,
	* include/roboptim/core/n-times-derivable-function.hh,
	* include/roboptim/core/visualization/fwd.hh,
	* src/derivable-function.cc,
	* src/doc.hh,
	* src/finite-difference-gradient.cc,
	* src/function.cc,
	* src/generic-solver.cc,
	* src/indent.cc,
	* src/linear-function.cc,
	* src/numeric-linear-function.cc,
	* src/numeric-quadratic-function.cc,
	* src/quadratic-function.cc,
	* src/result-with-warnings.cc,
	* src/result.cc,
	* src/roboptim-core-dummy-plugin.cc,
	* src/solver-error.cc,
	* src/solver-warning.cc,
	* src/twice-derivable-function.cc,
	* src/util.cc:
	Fix Doxygen documentation and missing group definition.

2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Document and clean.
	* include/roboptim/core/finite-difference-gradient.hh,
	* include/roboptim/core/freeze.hh,
	* include/roboptim/core/linear-function.hh,
	* include/roboptim/core/n-times-derivable-function.hh,
	* include/roboptim/core/problem.hh,
	* src/freeze.cc,
	* src/linear-function.cc,
	* tests/finite-difference-gradient.cc,
	* tests/finite-difference-gradient.stdout,
	* tests/problem-cc.cc,
	* tests/simple.cc,
	* tests/simple.stdout: Document and clean.

2009-06-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Document and clean.
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/finite-difference-gradient.hh,
	* include/roboptim/core/freeze.hh,
	* include/roboptim/core/fwd.hh,
	* include/roboptim/core/numeric-linear-function.hh,
	* include/roboptim/core/numeric-quadratic-function.hh,